--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,38 @@
 spring.application.name=gestion_de_notes
+
+#admin
+app.admin.username=admin
+app.admin.password=adminpass
+app.admin.email=admin@example.com
+
+
+# JWT Secret Key (generate a strong, random key, e.g., using:
+#     echo 'your-secret-key' | base64
+# or a secure online generator)
+gestion_.de_.notes.app.jwtSecret=vQ06Z7bQqS7FeTCHeQvZNN31mBjxMZ7nXqVxT9+WLg4=
+
+# JWT Token Expiration Time in milliseconds (e.g., 24 hours)
+gestion_.de_.notes.app.jwtExpirationMs=86400000
+
+# Database Configuration (example for PostgreSQL)
+spring.datasource.url=jdbc:postgresql://localhost:5432/GradeManagement_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Config
+# avoid <ddl-auto on "create"> it recreate the table each time the application is relaunched
+#spring.jpa.hibernate.ddl-auto=update # Use 'update' for dev, 'none' or 'validate' for prod
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jap.properties.hibernate.format_sql=true
+
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+
+#Docker compose file
+spring.docker.compose.file=./compose.yaml
+
+server.port=8083
