--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,12 @@
 services:
   postgres:
     image: 'postgres:latest'
+    restart: 'always'
     environment:
-      - 'POSTGRES_DB=notes'
+      - 'POSTGRES_DB=GradeManagement_db'
       - 'POSTGRES_PASSWORD=postgres'
       - 'POSTGRES_USER=postgres'
     ports:
-      - '5433'
+      - '5433:5432'
+    #volumes :
+    #  - db_data:/var/lib/postgresql/data
